# cosmoutils

./: Cargo.toml  README.md  shell.nix
src/: lib.rs  modules.rs
src/modules/: bedrock.rs  detect_os.rs  file_contains.rs  init.rs  is_cmd_installed.rs  is_root.rs  msg.rs  nixos.rs  notifications.rs  process_running.rs  spinner.rs
src/modules/init/: dinit.rs  openrc.rs  runit.rs  systemd.rs
