[package]
name = "cosmoutils"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/DarkmatterOrg/cosmoutils"
documentation = "https://docs.rs/cosmoutils/"
description = "Useful utilities for writting Rust CLI tools"
license = "MIT"

[dependencies]
cli_input = "1.0.4"
colored = "3.0.0"
directories = "6.0.0"
libc = "0.2.172"
notify-rust = "4.11.7"
regex = "1.11.1"
which = "7.0.3"
