[package]
name = "cosmoutils"
version = "0.2.6"
edition = "2024"
repository = "https://github.com/DarkmatterOrg/cosmoutils"
documentation = "https://docs.rs/cosmoutils/"
description = "Useful utilities for writting Rust CLI tools"
license = "MIT"

[features]
bedrock = []
nixos = []
runit = []
systemd = []
dinit = []
openrc = []
notifications = ["dep:notify-rust"]

[dependencies]
colored = "3.0.0"
libc = "0.2.172"
notify-rust = { version = "4.11.7", optional = true }
regex = "1.11.1"
spinners = "4.1.1"
which = "7.0.3"
